wp-content/plugins/make-elementor-widgets/css/style.css
.make-elementor-expando-box {
	border-bottom: solid 2px #ccc;
}
.make-elementor-expando-box h4 {
	 font-family: 'Roboto Bold';
	 color: red;
	 font-size: 22px;
	 margin: 10px 5px 15px !important;
	 display: flex;
	 position: relative;
	 align-items: center;
}
.make-elementor-expando-box h4 img {
	 margin-right: 10px;
	 max-height: 50px;
}
.expandobox-align-after .make-elementor-expando-box h4::after, .expandobox-align-before .make-elementor-expando-box h4::before {
	font-family: FontAwesome;
	content: "\f078";
}
.expandobox-align-after .make-elementor-expando-box h4::after {
	position: absolute;
	right: 0px;
}
.expandobox-align-before .make-elementor-expando-box h4::before {
	left: 0px;
	margin-right: 10px;
}
.expandobox-align-after .make-elementor-expando-box h4:not(.closed)::after, .expandobox-align-before .make-elementor-expando-box h4:not(.closed)::before {
	 content: "\f077";
}
.make-elementor-expando-box h4:not(.closed) {
	 border-bottom: solid 2px #ccc;
	 padding-bottom: 15px;
}
.make-elementor-expando-box ul {
	 list-style: none;
	 margin-left: 15px;
	 transition: max-height 0.5s;
	 max-height: 0px;
	 height: 0px;
	 overflow: hidden;
	 margin-bottom: 0px;
}
.make-elementor-expando-box ul li {
	 margin-bottom: 10px;
}
.make-elementor-expando-box ul li p {
	 margin: 0px;
}
.make-elementor-expando-box ul:not(.closed) {
	 max-height: 3000px;
	 height: auto;
	 margin-top: auto;
}

/* Elementor Widget Custom RSS */
.elementor-widget-makecustomrss .elementor-widget-container h4, .elementor-widget-upcomingmakerfaires .elementor-widget-container h4 {
	margin: 0px;
	padding: 15px 25px;
	text-transform: uppercase;
	color: #fff;
	background: #005e9a;
}
.elementor-widget-makecustomrss .elementor-widget-container h4 a {
	color: #fff;
}

.elementor-widget-makecustomrss ul.custom-rss-elementor {
	margin: 0px;
}
.elementor-widget-makecustomrss ul.custom-rss-elementor li {
	border: 1px solid #e3e3e3;
	box-shadow: 3px 3px 13px -5px rgba(0,0,0,.75);
	padding: 15px 20px;
	margin: 30px 0px;
	display: flex;
	flex-direction: column;
}
.elementor-widget-makecustomrss ul.custom-rss-elementor li a {
	color: #333;
}
.elementor-widget-makecustomrss ul.custom-rss-elementor li .rss-image-wrapper {
	overflow: hidden;
	aspect-ratio: 2 / 1.25;
	margin-bottom: 10px;
}
.elementor-widget-makecustomrss ul.custom-rss-elementor li .rss-image-wrapper img {
	width: 100%;
}
.elementor-widget-makecustomrss ul.custom-rss-elementor li .rssTitle {
	font-size: 20px;
	line-height: 22px;
	text-align: center;
	font-weight: bold;
	margin-bottom: 10px;
}

/* Upcoming Maker Faires widget */
.elementor-widget-upcomingmakerfaires .upcoming-makerfaires-feed > img {
	width: 100%;
	padding: 10px;
}
.elementor-widget-upcomingmakerfaires ul {
	list-style: none;
	margin: 0px;
	padding: 20px;
}
.elementor-widget-upcomingmakerfaires ul li {
	margin-bottom: 15px;
}
.elementor-widget-upcomingmakerfaires ul h5 {
	font-size: 18px;
	margin-top: 0px;
}

/* makercamp widget shouldn't get bunched up if it's already in a narrow column */
.elementor-col-33 .elementor-widget-makercampprojects .ld-course-list-items .col-md-4{
	max-width: 100%;
	flex: 100%;
}
.elementor-col-50 .elementor-widget-makercampprojects .ld-course-list-items .col-md-4{
	max-width: 50%;
	flex: 0 0 50%;
}

